--- a/pom.xml
+++ b/pom.xml
@@ -13,10 +13,11 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>rest-app</name>
-	<description>RESTful API Analysis and Demo for Vandelay Industries</description>
+	<description>Restful API Analysis and Demo for Vandelay Industries</description>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
+
 	<dependencies>
 	
 		<dependency>
@@ -34,20 +35,6 @@
      		<artifactId>springfox-boot-starter</artifactId>
      		<version>3.0.0</version>
  		</dependency>
-        
-        <!--
-        <dependency>
-    		<groupId>io.springfox</groupId>
-    		<artifactId>springfox-swagger2</artifactId>
-   			<version>3.0.0</version>
-		</dependency>
-		
-		<dependency>
-    		<groupId>io.springfox</groupId>
-    		<artifactId>springfox-swagger-ui</artifactId>
-    		<version>3.0.0</version>
-		</dependency>
-        -->
         
         <dependency>
     		<groupId>mysql</groupId>
