--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=root#131
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Spring JPA generate DDL on start-up (default -> false)
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 
 
 # Hibernate ddl-auto (none (default), create-only, drop, create, create-drop, validate, update)
