--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,71 @@
-# Created by https://www.toptal.com/developers/gitignore/api/java,macos,maven,intellij,windows
-# Edit at https://www.toptal.com/developers/gitignore?templates=java,macos,maven,intellij,windows
+# Created by https://www.toptal.com/developers/gitignore/api/java,maven,macos,windows,intellij,eclipse
+# Edit at https://www.toptal.com/developers/gitignore?templates=java,maven,macos,windows,intellij,eclipse
+
+### Eclipse ###
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+
+# External tool builders
+.externalToolBuilders/
+
+# Locally stored "Eclipse launch configurations"
+*.launch
+
+# PyDev specific (Python IDE for Eclipse)
+*.pydevproject
+
+# CDT-specific (C/C++ Development Tooling)
+.cproject
+
+# CDT- autotools
+.autotools
+
+# Java annotation processor (APT)
+.factorypath
+
+# PDT-specific (PHP Development Tools)
+.buildpath
+
+# sbteclipse plugin
+.target
+
+# Tern plugin
+.tern-project
+
+# TeXlipse plugin
+.texlipse
+
+# STS (Spring Tool Suite)
+.springBeans
+
+# Code Recommenders
+.recommenders/
+
+# Annotation Processing
+.apt_generated/
+.apt_generated_test/
+
+# Scala IDE specific (Scala & Java development for Eclipse)
+.cache-main
+.scala_dependencies
+.worksheet
+
+# Uncomment this line if you wish to ignore the project description file.
+# Typically, this file would be tracked if it contains build/dependency configurations:
+#.project
+
+### Eclipse Patch ###
+# Spring Boot Tooling
+.sts4-cache/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -11,7 +77,9 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**
 .idea/
+*.iml
 
 # AWS User-specific
 .idea/**/aws.xml
@@ -56,7 +124,6 @@ cmake-build-*/
 
 # IntelliJ
 out/
-rest-app.iml
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
@@ -85,10 +152,10 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
- *.iml
- modules.xml
- .idea/misc.xml
- *.ipr
+# *.iml
+# modules.xml
+# .idea/misc.xml
+# *.ipr
 
 # Sonarlint plugin
 # https://plugins.jetbrains.com/plugin/7973-sonarlint
@@ -220,4 +287,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/java,macos,maven,intellij,windows
+# End of https://www.toptal.com/developers/gitignore/api/java,maven,macos,windows,intellij,eclipse
