--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+# Server Properties #
+server.port = 8080
+server.servlet.context-path=/rest-app
 
-## -----------------------------------------  Database Connection Properties  ------------------------------------------- ##
+# Database Connection Properties #
 spring.datasource.url=jdbc:mysql://localhost:3306/user_devl1?autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
